--- a/cross.html
+++ b/cross.html
@@ -30,9 +30,9 @@
           <ul>
             <li>
               <a href="index.html">Home</a>
-              <a class="target" href="">Cross-project</a>
-              <a href="">Semester</a>
-              <a href="">Exam</a>
+              <a class="target" href="cross.html">Cross-project</a>
+              <a href="semester.html">Semester</a>
+              <a href="exam.html">Exam</a>
             </li>
           </ul>
         </nav>
