--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <ul>
             <li>
               <a class="target" href="index.html">Home</a>
-              <a href="">Cross-project</a>
-              <a href="">Semester</a>
-              <a href="">Exam</a>
+              <a href="cross.html">Cross-project</a>
+              <a href="semester.html">Semester</a>
+              <a href="exam.html">Exam</a>
             </li>
           </ul>
         </nav>
