cleaned code, updated functioanlity

--- a/semester.html
+++ b/semester.html
@@ -54,13 +54,72 @@
         <div class="text-container">
           <h3>Contact form</h3>
           <p>
-            I have made some changes for the contact form validation. The validation used to go one by one on the
-            errors. Now it displays all the errors at once. This sollution is better for the users, because they could
-            see all their errors at once, instead of one. For the validation to pass it needs fill every critera for the
-            form. When it passes it will send an alert, which tells the users that the message has been sent.
+            I have added a contact form validation for my semester project. Since there was no javascript on this
+            project at first, i though this was needed for the website. To make the form passes the user have to type in
+            minimum 5 characters for the first name, exact 8 numbers for the phone number, and at last type in a valid
+            email asdress. If every requirements passes the users will notified with a box telling them that the
+            messsage has been sent. Furthermore I have added a easy description on what the users needs to type at first
+            to make less confusion about the form.
           </p>
-          <div class="img-container"></div>
+          <div class="img-container">
+            <img src="./projects/semester-contact.jpg" alt="" />
+          </div>
           <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Removing head element</h3>
+          <p>
+            When I delivered this project I had two head elements in my HTML document. I don't know how this happend at
+            first, but this a mistake I didn't see at the time. The other head element has been removed and fixed.
+          </p>
+          <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Fixing buttons</h3>
+          <p>
+            On this project every button was a children of anchor elements. I have now learned that buttons should only
+            be used for functionality purposes. On that thought I removed all the buttons and styled them as an anchor
+            tag instead and cleaned up some code for the different screens.
+          </p>
+          <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Global styles / white spaces / Main</h3>
+          <p class="text">
+            There was a lot of repeated CSS on every stylesheet for this project. With considering the DRY principles I
+            have now changed that, and made the code even more cleaner. I created a global stylesheet for every page,
+            which made the code much cleaner and neat. Also it was some files on this project that had some whitespaces
+            in them. Every file should now have been cleaned up, and there should be no unwanted errors.
+          </p>
+          <p>
+            In my index html file there was a mix-up between a main and section element. Main element was a descendant
+            of section elements. I have fixed cleaned this up and fixed this problem
+          </p>
+
+          <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Loader</h3>
+          <p>
+            I considered to add a loader for this website as well, but decided not to add it, because everything on the
+            page loads instantly. Also there is no API content which could take some time load.
+          </p>
+          <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Conclusion</h3>
+          <p>
+            This was my first project I really felt that did a good job on, and I was happy about the end result. I made
+            some mistakes in my coding, but I think also there is good to make some mistakes, because I can learn from
+            them and not make the same mistakes on my future projects. Some mistakes that I did have been cleaned up and
+            I will remember them. I also added some functionality to the website, since we didn't learn about javascript
+            at that time. Overall happy with the end result.
+          </p>
         </div>
       </div>
     </main>
