--- a/semester.html
+++ b/semester.html
@@ -43,10 +43,12 @@
         <h1>Semester</h1>
         <h2>Changes made</h2>
         <div class="btn-container">
-          <a class="btn web" href="#"
+          <a class="btn web" href="https://communitysciencemuseum-eirik.netlify.app"
             >View Website <span class="iconify" data-icon="cib:netlify" data-inline="false"></span
           ></a>
-          <a class="btn git" href="#">View Github <i class="fab fa-github"></i></a>
+          <a class="btn git" href="https://github.com/eiriklilleby/Semester-Project"
+            >View Github <i class="fab fa-github"></i
+          ></a>
         </div>
       </div>
 
@@ -98,7 +100,6 @@
             In my index html file there was a mix-up between a main and section element. Main element was a descendant
             of section elements. I have fixed cleaned this up and fixed this problem
           </p>
-
           <hr />
         </div>
 
