--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1>Eirik Lilleby</h1>
     <h2>Front-End Web Developer</h2>
 
-    <section class="project">
+    <main class="project">
       <div class="cross">
         <h3>Cross-project</h3>
         <a href="cross.html">
@@ -50,6 +50,6 @@
           <img src="./projects/exam.jpg" alt="" />
         </a>
       </div>
-    </section>
+    </main>
   </body>
 </html>
