--- a/cross.html
+++ b/cross.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Game hub is my cross project, and this is the changes I made" />
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <link rel="stylesheet" href="./styles/global.css" />
     <link rel="stylesheet" href="./styles/cross.css" />
@@ -43,10 +44,12 @@
         <h1>Cross project</h1>
         <h2>Changes made</h2>
         <div class="btn-container">
-          <a class="btn web" href="#"
+          <a class="btn web" href="https://game-hub-eirik.netlify.app"
             >View Website <span class="iconify" data-icon="cib:netlify" data-inline="false"></span
           ></a>
-          <a class="btn git" href="#">View Github <i class="fab fa-github"></i></a>
+          <a class="btn git" href="https://github.com/eiriklilleby/first-project"
+            >View Github <i class="fab fa-github"></i
+          ></a>
         </div>
       </div>
 
@@ -103,11 +106,20 @@
             details page for every game.
           </p>
           <div class="img-container">
-            <img src="./projects/apicontent.jpg" alt="" />
+            <img src="./projects/apicontent.jpg" alt="API content from most wishlisted games." />
           </div>
           <div class="img-container">
-            <img src="./projects/gamedetails.jpg" alt="" />
+            <img src="./projects/gamedetails.jpg" alt="A detailed page about games with images." />
           </div>
+          <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Removed console.logs</h3>
+          <p>
+            I've cleaned up some of my code and also removed the console.logs. By removing the console.logs it makes it
+            easier to read the full code, because they are only useful while testing.
+          </p>
           <hr />
         </div>
 
@@ -122,10 +134,30 @@
             users, because then they don't have to look for a "X" to close the image.
           </p>
           <div class="img-container">
-            <img src="./projects/module.jpg" alt="" />
+            <img src="./projects/module.jpg" alt="Image displaying with a full size of a game." />
           </div>
-
           <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Removed console.logs</h3>
+          <p>
+            I've cleaned up some of my code and also removed the console.logs. By removing the console.logs it makes it
+            easier to read the full code, because they are only useful while testing.
+          </p>
+          <hr />
+        </div>
+
+        <div class="text-container">
+          <h3>Conclusion</h3>
+          <p>
+            GameHub was my first ever website that I coded. This was very challenging and fun, and the result was
+            pleasing. I have updated the website quite often after the first draft. The website have now fully
+            functional API content. Only thing that this website is missing is a working shopping cart with the API. I
+            didn't have time to implend this, but I watched the seminar video about it. This is something I will work on
+            next time. Instead I fixed a lot other issues on the page, and added a image module to every game images on
+            the "details" page. Overall happy with the end result.
+          </p>
         </div>
       </div>
     </main>
