--- a/exam.html
+++ b/exam.html
@@ -64,7 +64,7 @@
             inputs.
           </p>
           <div class="img-container">
-            <img src="./projects/newsletter.jpg" alt="" />
+            <img src="./projects/newsletter.jpg" alt="Showing newletter with updated validation" />
           </div>
           <hr />
         </div>
@@ -77,7 +77,7 @@
             fix this issue I added some shadow underneath my header to fix this issue. I think it looks neat and works.
           </p>
           <div class="img-container border">
-            <img src="./projects/nav.jpg" alt="" />
+            <img src="./projects/nav.jpg" alt="Showing header with updated shadow" />
           </div>
           <hr />
         </div>
