--- a/semester.html
+++ b/semester.html
@@ -68,7 +68,7 @@
             to make less confusion about the form.
           </p>
           <div class="img-container">
-            <img src="./projects/semester-contact.jpg" alt="" />
+            <img src="./projects/semester-contact.jpg" alt="Showing contact form with added validation" />
           </div>
           <hr />
         </div>
