updated text and responsiveness

--- a/cross.html
+++ b/cross.html
@@ -125,13 +125,16 @@
 
         <div class="text-container">
           <h3>Added image module</h3>
-          <p>
+          <p class="text">
             On my details page for every game I have added an image module for every image displayed on the page. On my
             project Exam I also added an image module for my page, but only for one image. On my GameHub page I added a
-            module for every image, which was a lot harder to accomplish. After a lot of failures I figured it out. The
-            sollution was to target the "data-orignal" on every image when you click the image. Then a module of that
-            picture would be open, and you can just click outside of the image. I find this sollution better for the
-            users, because then they don't have to look for a "X" to close the image.
+            module for every image, which was a lot harder to accomplish.
+          </p>
+          <p>
+            After a lot of failures I figured it out. The solution was to target the "data-orignal" on every image when
+            you click the image. Then a module of that picture would be open, and you can just click outside of the
+            image. I find this sollution better for the users, because then they don't have to look for a "X" to close
+            the image.
           </p>
           <div class="img-container">
             <img src="./projects/module.jpg" alt="Image displaying with a full size of a game." />
@@ -150,13 +153,16 @@
 
         <div class="text-container">
           <h3>Conclusion</h3>
-          <p>
+          <p class="text">
             GameHub was my first ever website that I coded. This was very challenging and fun, and the result was
             pleasing. I have updated the website quite often after the first draft. The website have now fully
-            functional API content. Only thing that this website is missing is a working shopping cart with the API. I
-            didn't have time to implend this, but I watched the seminar video about it. This is something I will work on
-            next time. Instead I fixed a lot other issues on the page, and added a image module to every game images on
-            the "details" page. Overall happy with the end result.
+            functional API content.
+          </p>
+          <p>
+            Only thing that this website is missing is a working shopping cart with the API. I didn't have time to
+            implend this, but I watched the seminar video about it. This is something I will work on next time. Instead
+            I fixed a lot other issues on the page, and added a image module to every game images on the "details" page.
+            Overall happy with the end result.
           </p>
         </div>
       </div>
