--- a/exam.html
+++ b/exam.html
@@ -56,12 +56,14 @@
       <div class="container">
         <div class="text-container">
           <h3>Newsletter form and labels</h3>
-          <p>
+          <p class="text">
             This website was missing a form validation on the newsletter signup on the footer. It was also missing a
             label in the input. Both have been added to fix this issue. When the form passes with a valid email address
-            the user will be notified with a message, telling them that they have signed up. There was also a missplaced
-            label in my contact form. That have now also been dealt with. Every label is now connected with their
-            inputs.
+            the user will be notified with a message, telling them that they have signed up.
+          </p>
+          <p>
+            There was also a missplaced label in my contact form. That have now also been dealt with. Every label is now
+            connected with their inputs.
           </p>
           <div class="img-container">
             <img src="./projects/newsletter.jpg" alt="Showing newletter with updated validation" />
@@ -124,14 +126,19 @@
 
         <div class="text-container">
           <h3>Conclusion</h3>
-          <p>
+          <p class="text">
             Travezy was my last project for my first year of coding. I was happy with the design I came up with and
             everything came together well. This was the hardest project so far, because there a lot of javascript I
-            didn't knew how to solve. I tried to make the carousel even better before delivering this Portfolio. One of
-            the things I tried to do was to show only one blog post on a smaller screen. I tried different codes, but I
-            didn't get it to work this time. There was so much little time to figure this out. I only got it to work
-            when I refreshed the page on a smaller screen size. By doing this project I really learned a lot, and I will
-            keep improving my HTML, CSS and JS. Overall happy with the end result and my first year of coding.
+            didn't knew how to solve. I tried to make the carousel even better before delivering this Portfolio.
+          </p>
+          <p class="text">
+            One of the things I tried to do was to show only one blog post on a smaller screen. I tried different codes,
+            but I didn't get it to work this time. There was so much little time to figure this out. I only got it to
+            work when I refreshed the page on a smaller screen size.
+          </p>
+          <p>
+            While working on this project I really learned a lot, and I will keep improving my HTML, CSS and JS. Overall
+            happy with the end result and my first year of coding.
           </p>
         </div>
       </div>
