--- a/semester.html
+++ b/semester.html
@@ -59,13 +59,16 @@
       <div class="container">
         <div class="text-container">
           <h3>Contact form</h3>
-          <p>
+          <p class="text">
             I have added a contact form validation for my semester project. Since there was no javascript on this
             project at first, i though this was needed for the website. To make the form passes the user have to type in
             minimum 5 characters for the first name, exact 8 numbers for the phone number, and at last type in a valid
-            email asdress. If every requirements passes the users will notified with a box telling them that the
-            messsage has been sent. Furthermore I have added a easy description on what the users needs to type at first
-            to make less confusion about the form.
+            email address.
+          </p>
+          <p>
+            If every requirements passes the users will notified with a box telling them that the messsage has been
+            sent. Furthermore I have added a easy description on what the users needs to type at first to make less
+            confusion about the form.
           </p>
           <div class="img-container">
             <img src="./projects/semester-contact.jpg" alt="Showing contact form with added validation" />
@@ -97,12 +100,15 @@
           <p class="text">
             There was a lot of repeated CSS on every stylesheet for this project. With considering the DRY principles I
             have now changed that, and made the code even more cleaner. I created a global stylesheet for every page,
-            which made the code much cleaner and neat. Also it was some files on this project that had some whitespaces
-            in them. Every file should now have been cleaned up, and there should be no unwanted errors.
+            which made the code much cleaner and neat.
+          </p>
+          <p class="text">
+            Also it was some files on this project that had some whitespaces in them. Every file should now have been
+            cleaned up, and there should be no unwanted errors.
           </p>
           <p>
             In my index html file there was a mix-up between a main and section element. Main element was a descendant
-            of section elements. I have fixed cleaned this up and fixed this problem
+            of section elements. I have fixed cleaned this up and fixed this problem.
           </p>
           <hr />
         </div>
@@ -118,12 +124,14 @@
 
         <div class="text-container">
           <h3>Conclusion</h3>
-          <p>
+          <p class="text">
             This was my first project I really felt that did a good job on, and I was happy about the end result. I made
             some mistakes in my coding, but I think also there is good to make some mistakes, because I can learn from
-            them and not make the same mistakes on my future projects. Some mistakes that I did have been cleaned up and
-            I will remember them. I also added some functionality to the website, since we didn't learn about javascript
-            at that time. Overall happy with the end result.
+            them and not make the same mistakes on my future projects.
+          </p>
+          <p>
+            Some mistakes that I did have been cleaned up and I will remember them. I also added some functionality to
+            the website, since we didn't learn about javascript at that time. Overall happy with the end result.
           </p>
         </div>
       </div>
